<resources>
    <string name="app_name">TE Mobile Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_success">add success</string>
    <string name="replace">Replace</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="login_btn_cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="confirm">Confirm</string>
    <string name="unit_hour">Hour</string>
    <string name="unit_minute">Minute</string>
    <string name="unit_second">Second</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="device_performance_warn">Lack of equipment performance, operation failed.</string>
    <string name="open_source_licenses"><u>Open-Source License</u></string>
    <string name="net_setting">Server Settings</string>
    <string name="clear">Clear Account ID</string>
    <string name="about">About</string>
    <string name="err_report">Collect Log</string>
    <string name="click_net_setting">Click here to set the server information</string>
    <string name="err_report_send">Send Fault Report by Email</string>
    <string name="err_report_log">Logging</string>
    <string name="err_report_no_log">No log file to send.</string>
    <string name="err_report_zip_false">Failed to pack the logs</string>
    <string name="err_report_isziping">Compressing...</string>
    <string name="protocol_type">Transmission protocol</string>
    <string name="service">Server</string>
    <string name="TCP">TCP</string>
    <string name="UDP">UDP</string>
    <string name="TLS">TLS</string>
    <string name="bfcp_setting">BFCP Settings</string>
    <string name="start_bfcp">Enable BFCP</string>
    <string name="heartbeat_setting"><b>Heart Beat Setting</b></string>
    <string name="start_heartbeat">Enable heart beat</string>
    <string name="import_cer">Import</string>
    <string name="import_other_cer">Import</string>
    <string name="other_cer">Other Cert.</string>
    <string name="huawei_cer">Huawei TLS root Cert.</string>
    <string name="tls_cer">TLS root Cert.</string>
    <string name="tls_cers">TLS Certificate</string>
    <string name="please_select_cer">Select a certificate file</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="serviceip">Address</string>
    <string name="serviceaddr">Server Address</string>
    <string name="advance">Show Advance Settings</string>
    <string name="port">Port</string>
    <string name="serviceport">Server Port</string>
    <string name="serverblank">Server Address cannot be left blank</string>
    <string name="portblank">Server port number cannot be left blank</string>
    <string name="sipurierror">sip uri is error</string>
    <string name="localsipporterror">Please insert number between 5060 and 5080</string>
    <string name="mediaporterror">Please insert number between 10002 and 65528</string>
    <string name="iphonepassword">Password</string>
    <string name="account">Account</string>
    <string name="autologin">Auto Login</string>
    <string name="savepass">Remember Password</string>
    <string name="anonymitylogin">Skip Login</string>
    <string name="locking">Lock time left:</string>
    <string name="login">Log In</string>
    <string name="userorpasswrong">The account ID and password cannot be left blank</string>
    <string name="rusuretoexit">Are you sure you want to log out?</string>
    <string name="rusuretologout">Log out?</string>
    <string name="sureclear"> Are you sure you want to clear the account Info?</string>
    <string name="logouting">Logging out,please wait...</string>
    <string name="exiting">Exiting,please wait...</string>
    <string name="ipchanged">IP address changed. Re-logging in...</string>
    <string name="relogin">re-login</string>
    <string name="hide_board">Minimize</string>
    <string name="login_suc">You have logged in</string>
    <string name="huawei_law">Copyright © Huawei Technologies Co., Ltd.2014-2016. All rights reserved.</string>
    <string name="about_logo_bottom">Powered by Huawei iMedia Engine</string>
    <string name="aboutdetail">Copyright © Huawei Technologies Co., Ltd.2014-2016. All rights reserved. This program is protected by copyright laws and international copyright treaties. No part of this software may be reproduced or transmitted in any form or by any means without prior written consent of Huawei Technologies Co., Ltd.</string>
    <string name="pad_layout">Use tablet UI</string>
    <string name="confirm_pad_layout">Application will restart if you switch to the tablet UI. Continue?</string>
    <string name="confirm_not_pad_layout">Application will restart if you switch to another UI. Continue?</string>
    <string name="sip_uri">SIP URI</string>
    <string name="experience_immediately">Experience Now</string>
    <string name="welcome">Welcome to Use HUAWEI TE Mobile</string>
    <string name="input_confrence_number">Enter the conference ID</string>
    <string name="join_confrence">Join</string>
    <string name="signature_default">Enter your signature</string>
    <string name="setting">Settings</string>
    <string name="guidance">Instructions</string>
    <string name="new_help">Help Document</string>
    <string name="help">Help</string>
    <string name="local_ip">Local IP</string>
    <string name="user_feedback">Feedback</string>
    <string name="online_feedback">Online Feedback</string>
    <string name="no_browser">Please install a browser</string>
    <string name="online">Online</string>
    <string name="busy">Busy</string>
    <string name="offline">Offline</string>
    <string name="offline_calldisable">Call failed because you are offline.</string>
    <string name="voipregistering">Logging in... Please wait</string>
    <string name="nowifitip">Network unavailable. Check network settings.</string>
    <string name="find_update_version">New version detected. You can download it from Google Play, Appchina, or Hispace</string>
    <string name="state_setting">Status Settings</string>
    <string name="system_setting">System</string>
    <string name="self_info">Personal</string>
    <string name="head">Avatar</string>
    <string name="afficheboard">Bulletins</string>
    <string name="set_headPhoto_fail">Failed to upload the avatar</string>
    <string name="choose_photo">Select Avatar</string>
    <string name="no_cropping_app">No application can clip this picture</string>
    <string name="basic_setting">Basic Settings</string>
    <string name="setmedia_setting">Media</string>
    <string name="enable_ringtones">Incoming ringtone</string>
    <string name="enable_vibrate">Vibrate on incoming call</string>
    <string name="video_modestr">Video Mode</string>
    <string name="video_process_priority">Smooth</string>
    <string name="video_quality_priority">Sharp</string>
    <string name="bandwidth_setting">Network Bandwidth Set</string>
    <string name="wlan_call_bandwidth">WLAN Call Bandwidth</string>
    <string name="mobile_call_bandwidth">3G/4G Call Bandwidth</string>
    <string name="locked_setting">Account Locking</string>
    <string name="login_error_limit">Max. login attempts</string>
    <string name="locked_time_limit">Locking duration</string>
    <string name="times">times</string>
    <string name="secure_transpro">SRTP Encryption</string>
    <string name="call_encrypt_yes">Enable</string>
    <string name="call_encrypt_no">Disable</string>
    <string name="call_encrypt_auto">Max interconnectivity</string>
    <string name="calling_cannot_change">Calling, please modify after hang up!</string>
    <string name="time_minute">minutes</string>
    <string name="time_second">seconds</string>
    <string name="minute">%s min</string>
    <string name="local_port">Local Ports</string>
    <string name="local_sip_port">SIP Port</string>
    <string name="media_port">Media Port</string>
    <string name="set_change_password">Change password</string>
    <string name="setting_oldpassword">Old password</string>
    <string name="setting_in_oldpassword">In oldpassword</string>
    <string name="setting_newpassword">New password</string>
    <string name="setting_comfirmpassword">Comfirm password</string>
    <string name="set_oldpassword_notnull">The original password cannot be left blank</string>
    <string name="set_newpassword">Please enter a new password</string>
    <string name="set_comfirmpassword">Please confirm the password</string>
    <string name="set_notsame_password">New passwords are not the same</string>
    <string name="set_password_success">Change the password successfully</string>
    <string name="set_password_unsuccess">Change the password failure</string>
    <string name="set_password_offline">Offline,modify password failure</string>
    <string name="set_password_setting">Change the password, please wait...</string>
    <string name="set_password_formfalse">The new password format is not correct</string>
    <string name="share_success"> Document shared</string>
    <string name="share_fail"> Sharing failed</string>
    <string name="doc_sharing">You are sharing document</string>
    <string name="pdf_doc_sharing">Sharing document</string>
    <string name="remote_stop_share">The other party has stopped sharing</string>
    <string name="pdf_stoped">Sharing stopped</string>
    <string name="pdf_doc_fail">File type is unknown or the document is empty</string>
    <string name="pdf_file">Select Share Document</string>
    <string name="doc_share_local_layout_btn_back">Back</string>
    <string name="doc_share_local_layout_btn_share">Share</string>
    <string name="doc_share_local_layout_btn_stop_share">Stop Sharing</string>
    <string name="doc_share_local_error_filetype">Please select a PDF document</string>
    <string name="doc_share_local_error_file_too_large">The maximum file size is 30 MB </string>
    <string name="audio_chat">Voice call...</string>
    <string name="video_chat">Video chat...</string>
    <string name="audio_calling">Dialing...</string>
    <string name="video_calling">Video call...</string>
    <string name="session_holding">Session Holding…</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="local_doc">local_doc</string>
    <string name="camera_Img">camera_Img</string>
    <string name="contact_num_to_long">Number too long</string>
    <string name="contact_detail">Contact Details</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="replace_local_contact">This contact already exists.Replace it?</string>
    <string name="label_all_contacts">Contacts</string>
    <string name="local_contacts">Local</string>
    <string name="enterprise_contacts">Enterprise</string>
    <string name="file_name">File Name</string>
    <string name="detailinfo">Details</string>
    <string name="deletefriend">Delete Contact</string>
    <string name="loading_contact">Loading contacts...</string>
    <string name="create_new_contact">New Contact</string>
    <string name="create_contact_leng">please input less then %d</string>
    <string name="delete_contact_menu">Delete</string>
    <string name="input_name">Name</string>
    <string name="input_address">Address</string>
    <string name="input_department">Department</string>
    <string name="no_contacts">No Contacts</string>
    <string name="part_screen">Part Screen</string>
    <string name="close_camera">Close Camera</string>
    <string name="close_pip">Close Small Picture</string>
    <string name="switch_audio">Switch Audio</string>
</resources>