<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_call_menu_popupwindow_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="horizontal" >
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|bottom" >
    <!-- 本地文档 -->
        <LinearLayout
        android:id="@+id/share_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_state_menu_top_left"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/share_data_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:duplicateParentState="true"
            />

        <TextView
            android:id="@+id/share_data_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/local_doc"
            android:textColor="@color/te_back_text_color"
            android:textSize="17sp" />
        </LinearLayout>
	    <View 
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:id="@+id/share_data_line"
		    android:background="@drawable/te_line_crosswise"
		    android:layout_alignParentTop="true"
		    />


    <!-- 开启画中画 -->

    <LinearLayout
        android:id="@+id/close_pip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/close_pip_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/close_pip_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/close_pip"
            android:textColor="@color/te_back_text_color"
            android:textSize="17sp" />
    </LinearLayout>
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>
	    <!-- 转语音 -->

    <LinearLayout
        android:id="@+id/switch_audio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/switch_audio_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/switch_audio_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/switch_audio"
            android:textColor="@color/te_back_text_color"
            android:textSize="17sp" />
    </LinearLayout>
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>
    <!-- 全屏显示 -->
    <LinearLayout
        android:id="@+id/full_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_phone_more_background_left_bottom"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/full_screen_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/full_screen_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:gravity="center_vertical"
            android:text="@string/part_screen"
            android:duplicateParentState="true"
            android:textColor="@color/te_back_text_color"
            android:textSize="17sp" />
    </LinearLayout>
    </LinearLayout>
	<View 
	    android:layout_width="1px"
	    android:layout_height="match_parent"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|bottom" >
    <!-- 相册 -->
        <LinearLayout
        android:id="@+id/share_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_state_menu_top_right"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/share_pic_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:duplicateParentState="true"
            />

        <TextView
            android:id="@+id/share_pic_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/camera_Img"
            android:textColor="@color/te_back_text_color"
            android:textSize="17sp" />
        </LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:id="@+id/share_pic_line"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>
    <!-- 前后摄像头切换 -->

    <LinearLayout
        android:id="@+id/switch_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/switch_camera_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/switch_camera_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:gravity="center_vertical"
            android:text="@string/switch_camera"
            android:duplicateParentState="true"
            android:textColor="@color/te_back_text_color"
            android:textSize="17sp" />
    </LinearLayout>
    	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>
        <!-- 关闭摄像头 -->

    <LinearLayout
        android:id="@+id/close_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/close_camera_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/close_camera_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:gravity="center_vertical"
            android:text="@string/close_camera"
            android:duplicateParentState="true"
            android:textColor="@color/te_back_text_color"
            android:textSize="17dp" />
    </LinearLayout>
     <View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	   />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_phone_more_background_right_bottom"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:gravity="center_vertical"
            android:duplicateParentState="true"
            android:textColor="@color/te_back_text_color"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>